[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main Menu/Main_Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/Titillium-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Main Menu/Title_Screen.png" type="Texture" id=3]
[ext_resource path="res://Main Menu/troll.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.199219, 0.199219, 0.199219, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.0535583, 0.064363, 0.152344, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=2]
size = 32
use_filter = true
font_data = ExtResource( 2 )

[node name="Main_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
court1 = "res://Courtroom1.tscn"
level1 = "res://Level1.tscn"

[node name="Start_Menu" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.901961 )
margin_right = 1024.0
margin_bottom = 597.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title_Label" type="Label" parent="Start_Menu"]
margin_left = 20.0
margin_top = 10.0
margin_right = 185.0
margin_bottom = 62.0
rect_scale = Vector2( 1.4, 1.4 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "Charles Darwin!"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title_Screen" type="Sprite" parent="Start_Menu"]
position = Vector2( 510.624, 299.385 )
scale = Vector2( 0.950837, 0.825198 )
texture = ExtResource( 3 )

[node name="Button_Open_Godot" type="Button" parent="Start_Menu"]
margin_left = 445.902
margin_top = 467.0
margin_right = 577.902
margin_bottom = 519.0
text = "Open Godot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Start" type="Button" parent="Start_Menu"]
margin_left = 349.264
margin_top = 393.861
margin_right = 670.264
margin_bottom = 459.861
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Quit" type="Button" parent="Start_Menu"]
margin_left = 450.502
margin_top = 530.007
margin_right = 577.502
margin_bottom = 584.007
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level_Select_Menu" type="Panel" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.901961 )
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title_Label" type="Label" parent="Level_Select_Menu"]
margin_left = 20.0
margin_top = 10.0
margin_right = 227.0
margin_bottom = 77.0
rect_scale = Vector2( 1.4, 1.4 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "Select a level"
align = 1
valign = 1

[node name="Button_Back" type="Button" parent="Level_Select_Menu"]
margin_left = 18.8988
margin_top = 537.986
margin_right = 165.899
margin_bottom = 582.986
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Level1" type="Button" parent="Level_Select_Menu"]
margin_left = 49.1857
margin_top = 168.656
margin_right = 285.186
margin_bottom = 324.656
text = "Level 1"
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options_Menu" type="Panel" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.901961 )
margin_right = 330.0
margin_bottom = 720.0
custom_styles/panel = SubResource( 1 )

[node name="Title_Label" type="Label" parent="Options_Menu"]
margin_left = 20.0
margin_top = 10.0
margin_right = 227.0
margin_bottom = 53.0
rect_scale = Vector2( 1.4, 1.4 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "Options"
align = 1
valign = 1

[node name="Label_Mouse_Sensitivity" type="Label" parent="Options_Menu"]
margin_top = 120.0
margin_right = 330.0
margin_bottom = 152.0
custom_fonts/font = SubResource( 2 )
text = "Mouse sensitivity"
align = 1
valign = 1

[node name="HSlider_Mouse_Sensitivity" type="HSlider" parent="Options_Menu"]
margin_left = 10.0
margin_top = 160.0
margin_right = 320.0
margin_bottom = 176.0
min_value = 0.001
max_value = 0.4
step = 0.004
value = 0.012

[node name="Label_Joypad_Sensitivity" type="Label" parent="Options_Menu"]
margin_top = 190.0
margin_right = 330.0
margin_bottom = 222.0
custom_fonts/font = SubResource( 2 )
text = "Joypad sensitivity"
align = 1
valign = 1

[node name="HSlider_Joypad_Sensitivity" type="HSlider" parent="Options_Menu"]
margin_left = 10.0
margin_top = 230.0
margin_right = 320.0
margin_bottom = 246.0
min_value = 0.1
max_value = 5.0
step = 0.1
value = 0.1

[node name="Check_Button_VSync" type="CheckButton" parent="Options_Menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -135.0
margin_top = -450.0
margin_right = 135.0
margin_bottom = -410.0
custom_fonts/font = SubResource( 2 )
pressed = true
text = "V-Sync"

[node name="Button_Fullscreen" type="Button" parent="Options_Menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -135.0
margin_top = -400.0
margin_right = 135.0
margin_bottom = -350.0
custom_fonts/font = SubResource( 2 )
text = "Fullscreen"

[node name="Check_Button_Debug" type="CheckButton" parent="Options_Menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -155.0
margin_top = -150.0
margin_right = 155.0
margin_bottom = -110.0
custom_fonts/font = SubResource( 2 )
text = "Debug display"

[node name="Button_Back" type="Button" parent="Options_Menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -155.0
margin_top = -70.0
margin_right = 155.0
margin_bottom = -20.0
custom_fonts/font = SubResource( 2 )
text = "Back"
